correct data-center, news page

--- a/src/pug/0-0index.pug
+++ b/src/pug/0-0index.pug
@@ -146,5 +146,6 @@ block content
 				h2.h2 Новости дата-центра
 				+link-more('Все новости', 'main-news__more-news')
 			.main-news__wrap.fade-down
-				+news-item('news-1.jpg', '«Классика у Ратуши с velcom» подарила минчанам фотовыставку с лучшими моментами фестиваля', '25 августа 2017', 'news-index')
-				+news-item('news-2.jpg', '#velcombegom: минские бегуны впервые проведут 24-часовую эстафету-марафон', '23 августа 2017', 'news-index')
+				//-news-item(img, short_text, date, add_class, tags)
+				+news-item('news-1.jpg', '«Классика у Ратуши с velcom» подарила минчанам фотовыставку с лучшими моментами фестиваля', '25 августа 2017', 'news-index', 'Сми о нас')
+				+news-item('news-2.jpg', '#velcombegom: минские бегуны впервые проведут 24-часовую эстафету-марафон', '23 августа 2017', 'news-index', 'Мероприятие')
