--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -496,7 +496,21 @@ body
 			position: absolute
 			bottom: 35px
 			left: 16px
-			
+.news-filter
+	display: flex
+	justify-content: flex-end
+	margin-bottom: 50px
+	+r(480)
+		margin-bottom: 30px
+.news-wrap
+	display: flex
+	flex-wrap: wrap
+	justify-content: space-between
+	margin-bottom: -60px
+	+r(980)
+		margin-bottom: -40px
+	+r(620)
+		margin-bottom: -30px
 
 /*!** data-center page **/
 .data-center-slider
@@ -552,11 +566,36 @@ body
 	&__prev.slick-disabled,
 	&__next.slick-disabled
 		opacity: .4
-	& .custom_dots
+	&__dots
+		display: block
+		width: 100%
+		text-align: center
 		position: absolute
-		bottom: 3%
+		bottom: 5%
 		left: 50%
 		transform: translateX(-50%)
+		li
+			display: inline-block
+			font-size: 14px
+			background-color: transparent
+			color: rgba(#ffffff, .7)
+			border: 1px solid #cccccc
+			padding: 9px 15px
+			margin-right: -1px
+			+tr(all .4s ease)
+			&.slick-active
+				background-color: #ffed00
+				border-color: #ffed00
+				color: #000000
+				& + li
+					border-left-color: #ffed00
+			&:hover
+				cursor: pointer
+			+r(520)
+				padding: 9px
+				font-size: 11px
+			+r(350)
+				padding: 7px 5px
 	+r(768)
 		&__nav
 			display: none
@@ -799,15 +838,6 @@ body
 			&:nth-child(2n)
 				margin-right: 0
 
-.news-wrap
-	display: flex
-	flex-wrap: wrap
-	margin-bottom: -60px
-	+r(980)
-		margin-bottom: -40px
-	+r(620)
-		margin-bottom: -30px
-
 .gallery
 	display: flex
 	flex-wrap: wrap
@@ -972,8 +1002,9 @@ body
 	display: block
 	vertical-align: top
 	width: 165px
-	margin-right: 16px
 	position: relative
+	&:not(:first-child)
+		margin-left: 16px
 	+r(480)
 		width: 48%
 		margin-right: 2%
@@ -1300,7 +1331,10 @@ body
 	max-width: 714px
 	border: 1px solid #cccccc
 	padding: 38px 34px 33px 34px
+	position: relative
 	+tr(all .3s ease)
+	+r(520)
+		padding: 25px 20px 20px 20px
 	&:first-child
 		border-top: 1px solid #cccccc
 	&:not(:last-child)
@@ -1308,15 +1342,18 @@ body
 	.accordeon-head
 		padding: 0
 		position: relative
-		&-content
-			padding: 0
-			flex-direction: column
-			align-items: flex-start
+		flex-wrap: wrap
+		align-items: flex-start
+		justify-content: space-between
+		&-title,
+		&-text
+			width: 80%
 			max-width: 475px
-		.h4
+			+r(620)
+				width: 100%
+		&-title
 			display: flex
 			align-items: center
-			width: 100%
 			margin-bottom: 40px
 		&-icon
 			margin-left: 13px
@@ -1324,15 +1361,6 @@ body
 			span
 				width: 8px
 				height: 4px
-		&-decor
-			display: block
-			width: 80px
-			height: 90px
-			color: #f2db00
-			position: absolute
-			top: 0
-			right: 0
-
 	.accordeon-body
 		padding: 0
 		max-width: 544px
@@ -1348,10 +1376,33 @@ body
 					padding-right: 0
 	.accordeon-footer
 		margin-top: 40px
-
 	.link-view-all
 		&:hover
 			cursor: pointer
+	.accordeon-decor
+		display: block
+		width: 80px
+		height: 90px
+		color: #f2db00
+		position: absolute
+		top: 38px
+		right: 34px
+		svg
+			position: absolute
+			bottom: 0
+			right: 0
+		+r(620)
+			top: auto
+			bottom: 33px
+			right: 34px
+		+r(520)
+			bottom: 20px
+			right: 20px
+	.accordeon-parameters-check
+		display: block
+		width: 17px
+		height: 20px
+		font-size: 0
 
 .services-config-ordering
 	background-color: #fff233
