--- a/src/pug/1-5news-inner.pug
+++ b/src/pug/1-5news-inner.pug
@@ -3,7 +3,7 @@ include includes/_mixins.pug
 
 
 block title
-	title Инфраструктура
+	title Новости
 block config
 	- var main = true
 block content
@@ -13,9 +13,9 @@ block content
 		.box
 			.header-inner.header-inner_inner-page
 				.header-inner__title.fade-down
-					h1.h1 Инфраструктура
+					h1.h1 Новости
 	.box
-		+breadcrumbs(['Главная', 'Инфраструктура'])
+		+breadcrumbs(['Главная', 'дата-центр', 'Новости'])
 	.box
 		.content-wrap
 			aside.side-bar.js-stick-parent
@@ -26,11 +26,12 @@ block content
 							+icon('arrow_down')
 					+link-navigation(['Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости', 'Галерея'])
 			.content-inner
-				.content-inner-group.fade-down
-					h2.h2.content-inner__title Приняли участие в панельной дискуссии в рамках Мир ЦОД 2017
-					.image-inner-block image
-					h3.h3 Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных
-					p.text-primary Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных для операционной деятельности любого бизнеса практически в любой точке мира, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.
+				.content-area
+					h2 Приняли участие в панельной дискуссии в рамках Мир ЦОД 2017
+					p 25 августа 2017
+					img(src="img/news-bg-2.jpg", alt="image")
+					h3 Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных
+					p Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных для операционной деятельности любого бизнеса практически в любой точке мира, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.
 
 					.inner-slider
 						.inner-slider-init
@@ -50,9 +51,10 @@ block content
 							button(type="button").inner-slider__next
 								+icon('arrow')
 
-					p.text-primary Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных для операционной деятельности любого бизнеса практически в любой точке мира, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.
-	.main-news.fade-down
-		.box
+					p Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных для операционной деятельности любого бизнеса практически в любой точке мира, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.
+					.content-area-footer
+						+link-more('Вернуться назад', 'back-link')
+		.main-news.main-news_bt.fade-down
 			.main-news__wrap
 				+news-item('news-1.jpg', '«Классика у Ратуши с velcom» подарила минчанам фотовыставку с лучшими моментами фестиваля', '25 августа 2017', 'news-index')
 				+news-item('news-2.jpg', '#velcombegom: минские бегуны впервые проведут 24-часовую эстафету-марафон', '23 августа 2017', 'news-index')
