--- a/src/pug/5-1project-inner.pug
+++ b/src/pug/5-1project-inner.pug
@@ -80,8 +80,10 @@ block content
 							li.data-center-details__item.text-primary ЦОД обеспечен двумя независимыми оптическими подключениями, что гарантирует доступность каналов связи
 						hr
 						h3 Отзыв клиента
-						blockquote
-							i Дата-цент Velcom сыграл решающую роль в нашем процессе оптимизации работ.
-							span Вишневский Григорий Михайлович
+						p
+							img(src="img/blanck.jpg", alt="blanck")
+							blockquote
+								i Дата-цент Velcom сыграл решающую роль в нашем процессе оптимизации работ.
+								span Вишневский Григорий Михайлович
 					.content-area-footer
 						+link-more('Вернуться к проектам', 'back-link')
