--- a/src/pug/sertificate-popup.pug
+++ b/src/pug/sertificate-popup.pug
@@ -1,46 +1,47 @@
 include includes/_mixins.pug
 
 .wrap
-	.modal-container.contents-modal.sertificates-modal
-		button(type="button").pop-close.closePopup
-				+icon('close')
-		.big-image-slider
-			.big-image-slide
-				.big-image-slide-inner
-					img(src="img/sertificate-2-big.jpg", alt="sertificate")
-			.big-image-slide
-				.big-image-slide-inner
-					img(src="img/sertificate-2-big.jpg", alt="sertificate")
-			.big-image-slide
-				.big-image-slide-inner
-					img(src="img/gallery-photo-3.jpg", alt="sertificate")
-			.big-image-slide
-				.big-image-slide-inner
-					img(src="img/sertificate-2-big.jpg", alt="sertificate")
-		.modal-container-content
-			.contents-slider
-				.contents-slider-slide
-					.contents-slider-slide__info
-						.contents-slider-slide__period.text-primary c 09.06.2017 по 10.10.2018
-						.contents-slider-slide__title Tier III operational SUSTAINABILITY - GOLD
-						.contents-slider-slide__description.text-primary Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
-				.contents-slider-slide
-					.contents-slider-slide__info
-						.contents-slider-slide__period.text-primary 09.06.2017, бессрочно
-						.contents-slider-slide__title Uptime Institute Tier III Certified: Constructed Facility
-						.contents-slider-slide__description.text-primary Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
-				.contents-slider-slide
-					.contents-slider-slide__info
-						.contents-slider-slide__period.text-primary c 09.06.2017 по 10.10.2018
-						.contents-slider-slide__title Tier III operational SUSTAINABILITY - GOLD
-						.contents-slider-slide__description.text-primary Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
-				.contents-slider-slide
-					.contents-slider-slide__info
-						.contents-slider-slide__period.text-primary 09.06.2017, бессрочно
-						.contents-slider-slide__title Uptime Institute Tier III Certified: Constructed Facility
-						.contents-slider-slide__description.text-primary Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
-		.contents-modal__nav
-			button(type="button",class="slick-prev").contents-modal__prev
-				+icon('arrow')
-			button(type="button", class="slick-next").contents-modal__next
-				+icon('arrow')
+	.box
+		.modal-container.contents-modal.sertificates-modal
+			button(type="button").pop-close.closePopup
+					+icon('close')
+			.big-image-slider
+				.big-image-slide
+					.big-image-slide-inner
+						img(src="img/sertificate-2-big.jpg", alt="sertificate")
+				.big-image-slide
+					.big-image-slide-inner
+						img(src="img/sertificate-2-big.jpg", alt="sertificate")
+				.big-image-slide
+					.big-image-slide-inner
+						img(src="img/gallery-photo-3.jpg", alt="sertificate")
+				.big-image-slide
+					.big-image-slide-inner
+						img(src="img/sertificate-2-big.jpg", alt="sertificate")
+			.modal-container-content
+				.contents-slider
+					.contents-slider-slide
+						.contents-slider-slide__info
+							.contents-slider-slide__period.text-primary c 09.06.2017 по 10.10.2018
+							.contents-slider-slide__title Tier III operational SUSTAINABILITY - GOLD
+							.contents-slider-slide__description.text-primary Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
+					.contents-slider-slide
+						.contents-slider-slide__info
+							.contents-slider-slide__period.text-primary 09.06.2017, бессрочно
+							.contents-slider-slide__title Uptime Institute Tier III Certified: Constructed Facility
+							.contents-slider-slide__description.text-primary Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
+					.contents-slider-slide
+						.contents-slider-slide__info
+							.contents-slider-slide__period.text-primary c 09.06.2017 по 10.10.2018
+							.contents-slider-slide__title Tier III operational SUSTAINABILITY - GOLD
+							.contents-slider-slide__description.text-primary Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
+					.contents-slider-slide
+						.contents-slider-slide__info
+							.contents-slider-slide__period.text-primary 09.06.2017, бессрочно
+							.contents-slider-slide__title Uptime Institute Tier III Certified: Constructed Facility
+							.contents-slider-slide__description.text-primary Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
+			.contents-modal__nav
+				button(type="button",class="slick-prev").contents-modal__prev
+					+icon('arrow-light')
+				button(type="button", class="slick-next").contents-modal__next
+					+icon('arrow-light')
