--- a/src/pug/includes/_mixins.pug
+++ b/src/pug/includes/_mixins.pug
@@ -165,17 +165,17 @@ mixin link-banner(title, link, img, strong)
 			.link-banner__strong= strong
 		a(href="#").link-button.link-button_small= link
 
-mixin projesct-item(img, logo, title, info, add_class)
-	a(href="", class="projesct-item "+add_class)
-		.projesct-item__head
+mixin project-item(img, logo, title, info, add_class)
+	a(href="", class="project-item "+add_class)
+		.project-item__head
 			img(src="img/"+img, alt="project img")
-			.projesct-item-decor
-				.projesct-item-decor__logo
+			.project-item-decor
+				.project-item-decor__logo
 					img(src="img/png/"+logo, alt="project logo")
-				.projesct-item-decor__experience Лучший опыт
-		.projesct-item__body
-			h4.h4.projesct-item__title
-				span.projesct-item__t-text= title
-				span.projesct-item__t-arrow
+				.project-item-decor__experience Лучший опыт
+		.project-item__body
+			h4.h4.project-item__title
+				span.project-item__t-text= title
+				span.project-item__t-arrow
 					+icon('arrow-circle')
-			p.text-primary.projesct-item__info= info
+			p.text-primary.project-item__info= info
