--- a/src/sass/_inputs.sass
+++ b/src/sass/_inputs.sass
@@ -97,8 +97,6 @@
 						left: -53%
 			.countryTels
 
-
-
 	&-wrapper
 		position: relative
 		+tr(all .5s linear)
@@ -177,15 +175,36 @@
 			resize: none
 			background-color: #FFF
 			+tr(all .3s ease)
+			.select2-selection__arrow
+				width: 10px
+				height: 5px
+				top: 50%
+				transform: translateY(-50%)
+				right: 5px
+				background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGRhdGEtbmFtZT0iTGF5ZXIgMSIgdmlld0JveD0iMCAwIDE4LjEgMTEuMiI+PHBhdGggZD0iTTE2IDBMOS4xIDYuOSAyLjEgMCAwIDIuMWw5LjEgOS4xIDktOS4xTDE2IDAiIGZpbGw9ImN1cnJlbnRjb2xvciIvPjwvc3ZnPg==);
+				background-repeat: no-repeat
+				+tr(transform .5s ease)
+				b
+					display: none
 			&.select2-container--open
 				border: 2px solid #000;
 				margin-top: -1px
+				.select2-selection__arrow
+					transform: translateY(-50%) rotate(180deg)
 			.select2-selection
 				border: none
 				line-height: 1.1
 				padding-left: 0
 			.select2-selection__rendered
 				padding-left: 0
+			
+		&>.select2-container
+			.select2-results
+				ul::-webkit-scrollbar
+					width: 9px
+					background-color: #ebebeb
+				ul::-webkit-scrollbar-thumb
+					box-shadow: inset 0 0 35px 35px #f2db00
 	&-label
 		position: absolute
 		top: 22px
