--- a/src/sass/_repeat_block.sass
+++ b/src/sass/_repeat_block.sass
@@ -29,6 +29,12 @@
 		line-height:  1.333
 		font-weight: 800
 		max-width: 714px
+	img
+		width: 100%
+		max-width: 714px
+		max-height: 450px
+		margin-bottom: 30px
+		margin-top: 30px
 	p
 		font-size: 16px
 		line-height: 1.5
@@ -39,9 +45,11 @@
 		img
 			max-width: 280px
 			&[align="left"]
+				margin: 0
 				margin-right: 40px
 				margin-bottom: 20px
 			&[align="right"]
+				margin: 0
 				margin-top: 55px
 				margin-left: 30px
 		small
@@ -49,7 +57,7 @@
 			line-height: 1.714
 			color: #767a7d
 			font-weight: 400
-	a
+	a:not([class])
 		color: #000000
 		+tr(color .3s ease)
 		strong
@@ -86,6 +94,8 @@
 		max-width: 714px
 		margin-top: 42px
 		margin-bottom: 40px
+		img
+			margin: 0
 	
 	.parameters-table-wrap
 		padding-top: 20px
@@ -146,7 +156,7 @@
 		max-width: 714px
 
 .content-area-footer
-	margin-top: 100px
+	margin-top: 90px
 	margin-bottom: 10px
 
 .youtube
@@ -360,6 +370,7 @@ del
 	.icon-arrow-circle use
 		stroke: rgb(172, 174, 176)
 	&:hover
+		color: #000000
 		.icon-arrow-circle use
 			stroke: #000000
 	&:active
@@ -606,6 +617,12 @@ del
 		&::after
 			opacity: 1
 	+r(980)
+		&__img
+			width: 30%
+		&__short
+			max-width: 70%
+			padding-left: 15px
+	+r(850)
 		width: 100%
 		margin-bottom: 40px
 		&.news-index
@@ -1270,9 +1287,10 @@ del
 			+r(980)
 				width: 100%
 
-.projesct-item
+.project-item
 	display: block
 	width: 48%
+	height: 580px
 	margin-bottom: 50px
 	border: 1px solid #cccccc
 	&__head
@@ -1280,7 +1298,9 @@ del
 		margin: -1px
 		font-size: 0
 		position: relative
+		height: 55%
 		img
+			transform: scale(1.2)
 			+tr(all .3s ease)
 		&::after
 			content: ''
@@ -1295,14 +1315,17 @@ del
 			z-index: 1
 			+tr(all .3s ease)
 	&__body
+		height: 45%
 		background-color: #ffffff
 		padding: 35px 32px 40px 32px
+		display: flex
+		flex-direction: column
 	&__title
 		width: 100%
 		display: flex
 		justify-content: space-between
 		align-items: flex-start
-		margin-bottom: 20px
+		margin-bottom: auto
 		padding-bottom: 20px
 	&__t-text
 		display: block
@@ -1319,6 +1342,7 @@ del
 		+tr(margin-right .3s ease)
 	&__info
 		+tr(all .3s ease)
+		margin-top: 20px
 	&:hover
 		.icon-arrow-circle use 
 			stroke: #000000
@@ -1331,15 +1355,15 @@ del
 		color: #2e3031
 	&:hover &__head
 		img
-			transform: scale(1.1)
+			transform: scale(1.3)
 		&::after
 			opacity: 1
 	&:hover
-		.projesct-item-decor
+		.project-item-decor
 			&__experience
 				box-shadow: 0px 12px 30px 0px rgba(0, 0, 0, 0.25)
 	&.best-exp
-		.projesct-item-decor
+		.project-item-decor
 			&__experience
 				display: inline-block
 	+r(980)
@@ -1353,7 +1377,7 @@ del
 	+r(620)
 		width: 100%
 
-.projesct-item-decor
+.project-item-decor
 	display: flex
 	align-items: flex-start
 	justify-content: space-between
