--- a/src/pug/3-0service.pug
+++ b/src/pug/3-0service.pug
@@ -21,7 +21,7 @@ block content
 			h2.basic-services-title.h2.fade-up Основные услуги
 			.basic-services-slider
 				.basic-services-outer
-					.basic-services-wrapper.fade-down
+					.basic-services-wrapper
 						a(href="#").service-card
 							h4.service-card__title.h4 Co-location
 								span.service-card__t-arrow
