--- a/src/pug/5-1project-inner.pug
+++ b/src/pug/5-1project-inner.pug
@@ -80,8 +80,9 @@ block content
 							li.data-center-details__item.text-primary ЦОД обеспечен двумя независимыми оптическими подключениями, что гарантирует доступность каналов связи
 						hr
 						h3 Отзыв клиента
-						p
-							img(src="img/blanck.jpg", alt="blanck")
+						.feedback
+							.feedback__img
+								img(src="img/blanck.jpg", alt="blanck")
 							blockquote
 								i Дата-цент Velcom сыграл решающую роль в нашем процессе оптимизации работ.
 								span Вишневский Григорий Михайлович
