--- a/src/pug/3-2service-inner.pug
+++ b/src/pug/3-2service-inner.pug
@@ -822,3 +822,5 @@ block content
 														)
 														label.input-label(for="complete-count-сonnectors") Тип и количество разьемов
 					+link-more('Вернуться к услугам', 'back-link')
+			.services-inner-page__decoration
+				<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 53 63.5"><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M.5.5h52v16H.5zm4 20v-4m44 0v4m-42-15v6m4-6v6m4-6v6m4-6v6m4-6v6m-22 9h52v16H.5zm4 20v-4m44 0v4m-42-15v6m4-6v6m4-6v6m4-6v6m4-6v6m14-3h-2m-2 0h-2m-2 0h-2m-26 12h52v16H.5zm4 23v-7m44 0v7m-42-18v6m4-6v6m4-6v6m4-6v6m4-6v6"/><circle cx="43.5" cy="28.5" r="3" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M36.5 48.5h-2m-2 0h-2m-2 0h-2"/><circle cx="43.5" cy="48.5" r="3" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M36.5 8.5h-2m-2 0h-2m-2 0h-2"/><circle cx="43.5" cy="8.5" r="3" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M7.5 60.5h38"/></svg>
