--- a/src/pug/includes/_mixins.pug
+++ b/src/pug/includes/_mixins.pug
@@ -60,12 +60,13 @@ mixin contacts-header
 				span Техническая поддержка
 
 mixin link-more(text, add_class)
-	a(href="#", class="link-more "+add_class)= text
-		span.link-more__arrow
-			+icon('arrow-circle')
+	div(class="link-more "+add_class)
+		a(href="#")= text
+			span.link-more__arrow
+				+icon('arrow-circle')
 
-mixin datacenter-characteristics(val, text)
-	.datacenter-characteristics__item
+mixin datacenter-characteristics(val, text, style)
+	.datacenter-characteristics__item(style=""+style)
 		.datacenter-characteristics__value= val
 		.datacenter-characteristics__desc.text-primary= text
 
@@ -76,9 +77,12 @@ mixin news-item(img, short_text, date, add_class, tags)
 	if(add_class)
 		div(class="news-item "+add_class)
 			a(href="").news-item__inner
-				div(class="news-item__img "+add_class)
-					img(src="img/"+img, alt="")
-				div(class="news-item__short "+add_class)
+				.news-item-img
+					.news-item-img-outer
+						.news-item-img-inner
+							.news-item-img-el
+								img(src="img/"+img, alt="")
+				.news-item__short
 					p.text-primary.news-item__text= short_text
 					p.text-primary.news-item__info
 						span.news-item__date= date
@@ -86,14 +90,46 @@ mixin news-item(img, short_text, date, add_class, tags)
 	else
 		.news-item
 			a(href="").news-item__inner
-				.news-item__img
-					img(src="img/"+img, alt="")
+				.news-item-img
+					.news-item-img-outer
+						.news-item-img-inner
+							.news-item-img-el
+								img(src="img/"+img, alt="")
 				.news-item__short
 					p.text-primary.news-item__text= short_text
 					p.text-primary.news-item__info
 						span.news-item__date= date
 						span.news-item__tags= tags
 
+
+//- .partners-icon
+//- 	.partners-icon-outer
+//- 		.partners-icon-inner
+//- 			.partners-icon-logo
+//- 				img(src="img/png/sertificat-1.png", alt="partners logo")
+
+//- &-icon
+//- 	width: 22%
+//- 	+r(1100)
+//- 		width: 24%
+//- 	+r(980)
+//- 		width: 30%
+//- 		margin-bottom: 35px
+//- 	+r(480)
+//- 		width: 50%
+//- 	&-outer
+//- 		width: 100%
+//- 		height: 0
+//- 		position: relative
+//- 		padding-bottom: 100%
+//- 	&-inner
+//- 		+coverdiv
+//- 		+vertical
+//- 		border: 1px solid #cccccc
+//- 	&-logo
+//- 		display: inline-block
+//- 		vertical-align: middle
+//- 		width: 70%
 mixin breadcrumbs(crumbs)
 	.breadcrumbs
 		each crumb in crumbs
