--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -18,6 +18,7 @@ input[type="password"]
 
 input
 	box-shadow: none
+	outline: none
 	font-family: $o
 	color: #000
 	font-size: 16px
@@ -119,7 +120,11 @@ body
 	z-index: 0
 	padding-top: 60px
 	&_full-page
+		background-image: none
 		height: 100vh
+		+r(768)
+			height: auto
+			min-height: 500px
 
 .header-inner
 	height: 100%
@@ -250,8 +255,9 @@ body
 			padding: 0
 	&-wrapper
 		width: 100%
-		position: relative
-		& .slick-track,
+		& .slick-track
+			display: flex
+			align-items: stretch
 		& .slick-list
 			display: flex
 			align-items: stretch
@@ -315,7 +321,8 @@ body
 		height: 100%
 		width: 160px
 		//background-color: #ffffff
-		background-image: linear-gradient(to left, transparent, #ffffff)
+		background: -webkit-linear-gradient(90deg, white, rgba(255,255,255, 0))
+		background-image: linear-gradient(90deg, white,  rgba(255,255,255, 0))
 		position: absolute
 		top: 0
 		left: 0
@@ -324,8 +331,8 @@ body
 		display: block
 		height: 100%
 		width: 160px
-		//background-color: #ffffff
-		background-image: linear-gradient(to right, transparent, #ffffff)
+		background: -webkit-linear-gradient(90deg,  rgba(255,255,255, 0), white)
+		background-image: linear-gradient(90deg,  rgba(255,255,255, 0), white)
 		position: absolute
 		top: 0
 		right: 0
@@ -345,6 +352,7 @@ body
 		background-position-x: 100%
 
 .about-center
+	background-color: rgb(230,245,255)
 	background-image: linear-gradient(0deg, rgb(230,245,255) 23%, rgb(206,223,255) 74%, rgb(173,208,255) 100%)
 	padding-top: 90px
 	padding-bottom: 100px
@@ -485,6 +493,11 @@ body
 	position: relative
 	background-color: #ffffff
 	box-sizing: border-box
+	&__more-news
+		+rm(620)
+			position: absolute
+			right: 0
+			top: 13px
 	&__title
 		display: flex
 		justify-content: space-between
@@ -502,10 +515,6 @@ body
 		&__title
 			display: block
 			position: static
-		&__more-news
-			position: absolute
-			bottom: 35px
-			left: 16px
 .news-filter
 	display: flex
 	justify-content: flex-end
@@ -965,6 +974,25 @@ body
 		&__desc
 			margin-bottom: 50px
 
+
+.feedback
+	display: flex
+	align-items: flex-start
+	justify-content: space-between
+	&__img
+		width: 20%
+		img
+			margin: 0
+	blockquote
+		width: 75%
+	+r(768)
+		flex-direction: column
+		&__img
+			width: 60%
+			margin-bottom: 38px
+		blockquote
+			width: 100%
+	
 .projects-head
 	&__title
 		padding-bottom: 75px
@@ -1190,7 +1218,7 @@ body
 			position: absolute
 			left: 0
 			right: auto
-	.side-bar
+	.side-bar-nav
 		+r(768)
 			width: calc(100% - 120px)
 			margin-left: auto
