--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -59,10 +59,13 @@
 			display: block
 			width: 19px
 			height: 19px
+			padding: 10px
+			box-sizing: content-box
 			color: #000000
 			position: absolute
 			right: 20px
 			top: 20px
+			z-index: 20
 			+tr(all .5s ease)
 			&:hover
 				cursor: pointer
@@ -230,7 +233,8 @@
 		align-items: flex-start
 		width: 100%
 		height: 100%
-		padding: 59px 68px 35px 130px
+		padding: 0 68px 35px 130px
+		margin-top: 59px
 		overflow-y: auto
 	&-body
 		+vertical
@@ -323,7 +327,8 @@
 	+r(768)
 		overflow-y: scroll
 		&-inner
-			padding: 45px 25px 15px 40px
+			padding: 0 25px 15px 40px
+			margin-top: 45px
 		&__nav
 			width: 50%
 			padding-right: 20px
@@ -345,7 +350,8 @@
 				display: none
 	+r(620)
 		&-inner
-			padding: 52px 16px 30px 16px
+			padding: 0 16px 30px 16px
+			margin-top: 52px
 		&__close-btn
 			top: 19px
 			right: 19px
