--- a/src/sass/_repeat_block.sass
+++ b/src/sass/_repeat_block.sass
@@ -75,7 +75,9 @@
 		margin-top: 50px
 		margin-bottom: 50px
 		background-color: #ccc
-
+	.feedback
+		width: 100%
+		max-width: 714px
 	.datacenter-characteristics
 		width: 100%
 		margin-top: 40px
@@ -352,12 +354,16 @@ del
 			max-width: 110px;
 .link-more
 	display: inline-block
-	color: #000000
-	font-size: 18px
-	line-height: 1
-	font-weight: bold
-	position: relative
-	padding-right: 40px
+	a
+		color: #000000
+		font-size: 18px
+		line-height: 1
+		font-weight: bold
+		position: relative
+		padding-right: 40px
+		&:active
+			.icon-arrow-circle use
+				stroke: #edcd1c
 	&__arrow
 		position: absolute
 		top: 50%
@@ -370,17 +376,16 @@ del
 	.icon-arrow-circle use
 		stroke: rgb(172, 174, 176)
 	&:hover
-		color: #000000
+		a
+			color: #000000
 		.icon-arrow-circle use
 			stroke: #000000
-	&:active
-		.icon-arrow-circle use
-			stroke: #edcd1c
 	&:hover &__arrow
 		color: #000000
 	&.back-link
-		padding-right: 0
-		padding-left: 40px
+		a
+			padding-right: 0
+			padding-left: 40px
 	&.back-link	&__arrow
 		right: auto
 		left: 0
@@ -434,9 +439,7 @@ del
 			display: none
 
 .service-card
-	display: flex
-	flex-wrap: wrap
-	width: 30%
+	display: block
 	border: 1px solid #cccccc
 	padding: 38px 33px 33px 33px
 	background-color: #ffffff
@@ -493,11 +496,11 @@ del
 		&__icon
 			right: 16px
 	+r(1024)
-		width: 48.68%
-		margin-bottom: 27px
+		// width: 48.68%
+		//margin-bottom: 27px
 	+r(720)
 		padding: 38px 25px 33px 25px
-		width: 100%
+		// width: 100%
 		&__link
 			bottom: 33px
 			left: 25px
@@ -542,45 +545,41 @@ del
 	&__inner
 		display: flex
 		flex-wrap: wrap
+		align-items: flex-start
 		width: 90%
-	&__img
+	&-img
 		width: 30%
-		position: relative
 		overflow: hidden
-		&::after
-			content: ''
-			display:block
-			background-color: rgba(#000000, .2)
-			position: absolute
-			top: 0
-			left: 0
-			right: 0
-			bottom: 0
-			opacity: 0
-			z-index: 1
-			+tr(all .3s ease)
-		img
-			+tr(transform .3s ease)
-		&.top-news
+		+r(620)
 			width: 100%
-			max-height: 323px
-			// +r(1100)
-			// 	height: 280px
-			// +r(980)
-			// 	height: 250px
-			// +r(850)
-			// 	height: 220px
-			// img
-			// 	width: auto
-			// 	height: 100%
+		&-outer
+			width: 100%
+			height: 0
+			position: relative
+			padding-bottom: 65%
+		&-inner
+			+coverdiv
+		&-el
+			width: 100%
+			&::after
+				content: ''
+				display:block
+				background-color: rgba(#000000, .2)
+				position: absolute
+				top: 0
+				left: 0
+				right: 0
+				bottom: 0
+				opacity: 0
+				z-index: 1
+				+tr(all .3s ease)
+			img
+				+tr(transform .3s ease)
+				+r(620)
+					width: 100%
 	&__short
 		max-width: 70%
 		padding-left: 30px
-		&.top-news
-			width: 100%
-			max-width: 100%
-			padding-left: 0
-			margin-top: 25px
 	&__text
 		color: #000000
 		margin-bottom: 17px
@@ -601,6 +600,14 @@ del
 		width: 48%
 		.news-item__inner
 			width: 100%
+	&.top-news &-img
+		width: 100%
+		max-height: 323px
+	&.top-news &__short
+		width: 100%
+		max-width: 100%
+		padding-left: 0
+		margin-top: 25px
 	&.more-news
 		width: 80%
 		.news-item__inner
@@ -611,14 +618,16 @@ del
 		color: #5a5a5a
 	&:hover &__info
 		color: #2e3031
-	&:hover &__img
+	&:hover
 		img
 			transform: scale(1.1)
-		&::after
-			opacity: 1
+	&:hover &-img
+		&-el
+			img
+				transform: scale(1.1)
+			&::after
+				opacity: 1
 	+r(980)
-		&__img
-			width: 30%
 		&__short
 			max-width: 70%
 			padding-left: 15px
@@ -643,10 +652,6 @@ del
 			margin-bottom: 30px
 		&__inner
 			width: 100%
-		&__img
-			width: 100%
-			img
-				width: 100%
 		&__short
 			width: 100%
 			max-width: 100%
@@ -713,6 +718,10 @@ del
 	&_video
 		position: fixed
 		z-index: 0
+		+r(768)
+			position: absolute
+			.video-container
+				display: none
 	&:before
 		content: ''
 		+coverdiv
@@ -1570,17 +1579,43 @@ del
 		transform: translateY(0)
 		opacity: 1
 
-.slider-animate
-	transform: translateY(20px)
+.slider-title-animate
+	transform: translateY(-40px)
 	opacity: 0
-	+tr(all .3s ease .4s)
+	transition: opacity .3s ease .5s, transform .7s ease .5s
+.slider-text-animate
+	transform: translateY(-30px)
+	opacity: 0
+	transition: opacity .3s ease .7s, transform .8s ease .7s
+.slider-characteristics-animate
+	& > div
+		transform: translateY(40px)
+		opacity: 0
 
-.slick-initialized
-	.slick-slide.slick-current.slick-active
-		.slider-animate
+.slick-slide.slick-current.slick-active
+	.slider-characteristics-animate
+		& > div
 			transform: translateY(0)
 			opacity: 1
+	.slider-title-animate
+		transform: translateY(0)
+		opacity: 1
+	.slider-text-animate
+		transform: translateY(0)
+		opacity: 1
 
+.data-slider-animate.animated-it
+	.slick-slide.slick-current.slick-active
+		.slider-characteristics-animate
+			& > div
+				transform: translateY(0)
+				opacity: 1
+		.slider-title-animate
+			transform: translateY(0)
+			opacity: 1
+		.slider-text-animate
+			transform: translateY(0)
+			opacity: 1
 /* forms */
 
 .search-form
